# hash-calc

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: release.yml
lib/win32xx/: wxx_commondlg.h  wxx_controls.h  wxx_frame.h  wxx_setup.h
res/: app.manifest  resource.h  resource.rc
src/app/: main.cpp
src/core/: AlgorithmIds.h  HashAlgorithmFactory.cpp  HashAlgorithmFactory.h  HashCore.h  IHashAlgorithm.cpp  IHashAlgorithm.h
src/core/impl/: CRC.cpp  CRC.h  CryptoppHashBase.h  ExoticAlgorithms.cpp  Haval.cpp  Haval.h  MD6.cpp  MD6.h  ModernAlgorithms.cpp  OtherAlgorithms.cpp  OtherAlgorithms.h  SHAAlgorithms.cpp  SHAAlgorithms.h
src/core/impl/cryptopp/: CryptoppHashBase.h  ExoticAlgorithms.cpp  ExoticAlgorithms.h  ModernAlgorithms.cpp  ModernAlgorithms.h  OtherAlgorithms.cpp  OtherAlgorithms.h  SHAAlgorithms.cpp
src/core/impl/native/: BLAKE3.cpp  BLAKE3.h  CRC.cpp  CRC.h  GOST.cpp  GOST.h  GOST2012Tables.h  Haval.cpp  Haval.h  MD6.cpp  MD6.h
src/ui/: AboutDialog.cpp  AboutDialog.h  HashCalcDialog.cpp  HashCalcDialog.h  HoverButton.cpp  HoverButton.h  TabViewBase.cpp  TabViewBase.h  TabViewChecksum.cpp  TabViewChecksum.h  TabViewHAVAL.cpp  TabViewHAVAL.h  TabViewSHA.cpp  TabViewSHA.h  TabViewSHA3.cpp  TabViewSHA3.h
src/utils/: CommandLineParser.cpp  CommandLineParser.h  ConfigManager.cpp  ConfigManager.h  EditUtils.cpp  EditUtils.h
